<resources>
    <string name="app_name">RestaurantApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="account">Account</string>
    <string name="restaurant">restaurant</string>
    <string name="title">Find \nRestaurant Near you</string>
    <string name="email">Eamil</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="loginTitle">Login with your account</string>
    <string name="resgisterTitle">Create a New Account</string>
    <string name="userInfoTitle">Your User Information profile</string>
    <string name="username">Username</string>
    <string name="add">Add</string>
    <string name="comment">Write Comment</string>
    <string name="address">Address:</string>
    <string name="phone">Phone no:</string>
    <string name="districh">District: </string>
    <string name="logout">Logout</string>
</resources>
